Trying project setup (not yet working)

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
 	id 'java-library'
-	id 'org.fulib.fulibGradle' version '0.5.0'
 }
+
+jar.enabled = false
 
 group = 'org.fulib'
 version = '0.1.0'
@@ -19,7 +20,6 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.fulib/fulib
 	api group: 'org.fulib', name: 'fulib', version: '1.5.0'
 
-	fulibScenarios group: 'org.fulib', name: 'fulibScenarios', version: '1.7.0'
 
 	implementation 'org.fulib:fulibTables:1.4.0'
 	implementation 'org.fulib:fulibTools:1.5.1'
