--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'org.fulib.fulibGradle'
 }
 
 group = 'org.fulib'
@@ -12,7 +13,6 @@ repositories {
 	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
-sourceSets.create('gen')
 
 // Das
 dependencies {
@@ -33,19 +33,4 @@ dependencies {
 	genImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
 }
 
-tasks.register('genModel', JavaExec) {
-	it.classpath = sourceSets.gen.runtimeClasspath
-	it.main = 'unikassel.websystem.GenModel'
-	it.workingDir = project.projectDir
-
-	it.inputs.dir('src/main/java')
-	it.outputs.dir('src/main/java')
-}
-
-jar.enabled(false)
-
-// https://github.com/gradle/gradle/issues/820
-configurations.compile {
-	extendsFrom = extendsFrom.findAll { it != configurations.antlr }
-}
 
