--- a/test/src/gen/resources/org/fulib/workflows/ShopWorkflow.yml
+++ b/test/src/gen/resources/org/fulib/workflows/ShopWorkflow.yml
@@ -3,3 +3,10 @@
   product: shoes
   customer: Alice
   address: "Wonderland 1"
+  orign: Alice
+
+- ServiceRegistered: 10:00
+  name: Shop
+  events: OrderRegistered
+
+
