--- a/test/build.gradle
+++ b/test/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.fulib:fulibTools:1.5.1'
 	implementation 'org.fulib:fulibTables:1.4.0'
 
+	implementation "com.sparkjava:spark-core:2.9.3"
+	implementation "com.mashape.unirest:unirest-java:1.4.9"
+
 	// https://mvnrepository.com/artifact/junit/junit
 	testImplementation group: 'junit', name: 'junit', version: '4.13'
 	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
