--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
 	testImplementation group: 'junit', name: 'junit', version: '4.13'
 	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+
+	testImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
+	genImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
 }
 
 
