--- a/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	serviceSubscribed 	productStored 	storageData 	orderRegistered 	orderPicked
+  classes: 	event 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	serviceSubscribed 	productStored 	storageData 	orderRegistered 	orderPicked
+  subClasses: 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked
 
 - serviceSubscribed: 	org.fulib.classmodel.Clazz
   attributes: 	serviceSubscribed_serviceUrl
@@ -31,16 +31,8 @@
   propertyStyle: 	Bean
   superClass: 	event
 
-- storageData: 	org.fulib.classmodel.Clazz
-  attributes: 	storageData_Box 	storageData_product 	storageData_place
-  model: 	c
-  modified: 	false
-  name: 	StorageData
-  propertyStyle: 	Bean
-  superClass: 	event
-
 - orderRegistered: 	org.fulib.classmodel.Clazz
-  attributes: 	orderRegistered_product 	orderRegistered_customer 	orderRegistered_address
+  attributes: 	orderRegistered_product 	orderRegistered_customer 	orderRegistered_address 	orderRegistered_user
   model: 	c
   modified: 	false
   name: 	OrderRegistered
@@ -48,7 +40,7 @@
   superClass: 	event
 
 - orderPicked: 	org.fulib.classmodel.Clazz
-  attributes: 	orderPicked_order 	orderPicked_box 	orderPicked_customer 	orderPicked_address
+  attributes: 	orderPicked_pickTask 	orderPicked_box 	orderPicked_user
   model: 	c
   modified: 	false
   name: 	OrderPicked
@@ -116,33 +108,6 @@
   type: 	String
   typeSignature: 	String
 
-- storageData_Box: 	org.fulib.classmodel.Attribute
-  clazz: 	storageData
-  id: 	StorageData_Box
-  modified: 	false
-  name: 	Box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- storageData_product: 	org.fulib.classmodel.Attribute
-  clazz: 	storageData
-  id: 	StorageData_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- storageData_place: 	org.fulib.classmodel.Attribute
-  clazz: 	storageData
-  id: 	StorageData_place
-  modified: 	false
-  name: 	place
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
 - orderRegistered_product: 	org.fulib.classmodel.Attribute
   clazz: 	orderRegistered
   id: 	OrderRegistered_product
@@ -170,11 +135,20 @@
   type: 	String
   typeSignature: 	String
 
-- orderPicked_order: 	org.fulib.classmodel.Attribute
-  clazz: 	orderPicked
-  id: 	OrderPicked_order
+- orderRegistered_user: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegistered
+  id: 	OrderRegistered_user
   modified: 	false
-  name: 	order
+  name: 	user
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderPicked_pickTask: 	org.fulib.classmodel.Attribute
+  clazz: 	orderPicked
+  id: 	OrderPicked_pickTask
+  modified: 	false
+  name: 	pickTask
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
@@ -188,20 +162,11 @@
   type: 	String
   typeSignature: 	String
 
-- orderPicked_customer: 	org.fulib.classmodel.Attribute
+- orderPicked_user: 	org.fulib.classmodel.Attribute
   clazz: 	orderPicked
-  id: 	OrderPicked_customer
+  id: 	OrderPicked_user
   modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- orderPicked_address: 	org.fulib.classmodel.Attribute
-  clazz: 	orderPicked
-  id: 	OrderPicked_address
-  modified: 	false
-  name: 	address
+  name: 	user
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
