--- a/test/src/main/java/uks/fulibgen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked
+  classes: 	event 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked 	mockupDone
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked
+  subClasses: 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked 	mockupDone
 
 - serviceSubscribed: 	org.fulib.classmodel.Clazz
   attributes: 	serviceSubscribed_serviceUrl
@@ -44,6 +44,14 @@
   model: 	c
   modified: 	false
   name: 	OrderPicked
+  propertyStyle: 	Bean
+  superClass: 	event
+
+- mockupDone: 	org.fulib.classmodel.Clazz
+  attributes: 	mockupDone_OrderRegistered 	mockupDone_l1 	mockupDone_product 	mockupDone_customer 	mockupDone_address 	mockupDone_ok
+  model: 	c
+  modified: 	false
+  name: 	MockupDone
   propertyStyle: 	Bean
   superClass: 	event
 
@@ -167,6 +175,60 @@
   id: 	OrderPicked_user
   modified: 	false
   name: 	user
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_OrderRegistered: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_OrderRegistered
+  modified: 	false
+  name: 	OrderRegistered
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_l1: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_l1
+  modified: 	false
+  name: 	l1
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_product: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_product
+  modified: 	false
+  name: 	product
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_customer: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_customer
+  modified: 	false
+  name: 	customer
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_address: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_address
+  modified: 	false
+  name: 	address
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- mockupDone_ok: 	org.fulib.classmodel.Attribute
+  clazz: 	mockupDone
+  id: 	MockupDone_ok
+  modified: 	false
+  name: 	ok
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
